--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
 <h1>Hey ya'll suckers!</h1>
 <p>Tak sie to zaczyna, jeden gest, spojrzenie i jedna mina.</p>
-  
+<p>Namieszane!</p> 
 </body>
 </html>
